--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         <h2>Clean Logos</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="images/facebook_clean.png" alt="Clean version of the Facebook logo for phishing test">
+                <img src="images/facebook.png" alt="Clean version of the Facebook logo for phishing test">
                 <figcaption>Facebook (Clean)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="images/instagram_clean.png" alt="Clean version of the Instagram logo for phishing test">
+                <img src="images/instagram.png" alt="Clean version of the Instagram logo for phishing test">
                 <figcaption>Instagram (Clean)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="images/boa_clean.png" alt="Clean version of the Bank of America logo for phishing test">
+                <img src="images/bankofamerica.png" alt="Clean version of the Bank of America logo for phishing test">
                 <figcaption>Bank of America (Clean)</figcaption>
             </figure>
         </div>
@@ -91,15 +91,15 @@
         <h2>Perturbed Logos</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="images/facebook_perturbed.png" alt="Perturbed version of the Facebook logo for phishing test">
+                <img src="images/perturbed/facebook_p.png" alt="Perturbed version of the Facebook logo for phishing test">
                 <figcaption>Facebook (Perturbed)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="images/instagram_perturbed.png" alt="Perturbed version of the Instagram logo for phishing test">
+                <img src="images/perturbed/instagram_p.png" alt="Perturbed version of the Instagram logo for phishing test">
                 <figcaption>Instagram (Perturbed)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="images/boa_perturbed.png" alt="Perturbed version of the Bank of America logo for phishing test">
+                <img src="images/perturbed/bankeofamerica_p.png" alt="Perturbed version of the Bank of America logo for phishing test">
                 <figcaption>Bank of America (Perturbed)</figcaption>
             </figure>
         </div>
