--- a/tempIndex.html
+++ b/tempIndex.html
@@ -76,7 +76,7 @@
          
         <div class="logo-section">
             <figure class="logo">
-                <img src="logos/fb.png" alt="Clean version of the Facebook logo for phishing test">
+                <img src="./images/fb.png" alt="Clean version of the Facebook logo for phishing test">
                 <figcaption>Facebook (Clean)</figcaption>
             </figure>
     <!---
@@ -96,7 +96,7 @@
          
         <div class="logo-section">
             <figure class="logo">
-                <img src="perturb_logos/fb_1.png" alt="Perturbed version of the Facebook logo for phishing test">
+                <img src="./images/perturbed/fb_1.png" alt="Perturbed version of the Facebook logo for phishing test">
                 <figcaption>Facebook (Perturbed)</figcaption>
             </figure>
             <!--- 
