--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <section class="survey">
             <h2>Trust Survey</h2>
-            <form id="trust-survey-form">
+            <form id="trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="POST">
                 <label for="trust">Do you trust this website?</label>
                 <select id="trust" name="trust">
                     <option value="yes">Yes</option>
@@ -171,3 +171,4 @@
     </script>
 </body>
 </html>
+
