--- a/index.html
+++ b/index.html
@@ -54,19 +54,31 @@
         main {
             padding: 20px;
             background-color: #fff;
-            max-width: 800px;
+            max-width: 1000px;
             margin: 20px auto;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        h1, h2 {
-            color: #333;
+        .logo-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin: 20px 0;
         }
 
-        label {
-            display: block;
-            margin-top: 15px;
+        .logo-item {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo-item img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
         }
 
         select, textarea {
@@ -119,21 +131,52 @@
 
     <main>
         <section class="content">
-            <h1>Welcome to Our Website</h1>
-            <p>This is a sample website for testing purposes. Please navigate through the pages to understand our offerings.</p>
+            <h1>Welcome to Our Website Trust Test</h1>
+            <p>Please evaluate each logo shown below and let us know your thoughts on its trustworthiness.</p>
         </section>
 
-        <section class="survey">
-            <h2>Trust Survey</h2>
-            <form id="trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="POST">
-                <label for="trust">Do you trust this website?</label>
-                <select id="trust" name="trust">
+        <section class="logo-survey">
+            <div class="logo-grid">
+                <div class="logo-item">
+                    <img src="logo_noise_level_1.png" alt="Logo 1">
+                    <label>Do you trust this logo?</label>
+                    <select name="trust_logo_1" class="trust-select">
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <div class="logo-item">
+                    <img src="logo_noise_level_2.png" alt="Logo 2">
+                    <label>Do you trust this logo?</label>
+                    <select name="trust_logo_2" class="trust-select">
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <div class="logo-item">
+                    <img src="logo_noise_level_3.png" alt="Logo 3">
+                    <label>Do you trust this logo?</label>
+                    <select name="trust_logo_3" class="trust-select">
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <!-- Add more logos as needed -->
+            </div>
+
+            <form id="logo-trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="POST">
+                <h2>Trust Survey Summary</h2>
+                <label for="overall-trust">Overall, do you trust this website?</label>
+                <select id="overall-trust" name="overall_trust">
                     <option value="yes">Yes</option>
                     <option value="no">No</option>
                 </select>
                 <br>
                 <label for="reason">If no, please explain why:</label>
                 <textarea id="reason" name="reason" rows="4"></textarea>
+                <br>
+                <label for="improvement">How could we improve the trustworthiness of our website?</label>
+                <textarea id="improvement" name="improvement" rows="4"></textarea>
                 <br>
                 <button type="submit">Submit</button>
             </form>
@@ -147,19 +190,25 @@
     <script>
         // JavaScript to handle the trust survey form submission and log responses
         document.addEventListener("DOMContentLoaded", function() {
-            const form = document.getElementById("trust-survey-form");
+            const form = document.getElementById("logo-trust-survey-form");
 
             form.addEventListener("submit", function(event) {
                 event.preventDefault(); // Prevent form submission
 
-                const trustValue = document.getElementById("trust").value;
-                const reasonValue = document.getElementById("reason").value;
+                const logoTrustElements = document.querySelectorAll('.trust-select');
+                logoTrustElements.forEach((element, index) => {
+                    console.log(`Trust response for Logo ${index + 1}:`, element.value);
+                });
 
-                // Log the responses (In real testing, this could be sent to a backend server)
-                console.log("Trust response: ", trustValue);
-                if (trustValue === "no") {
+                const overallTrustValue = document.getElementById("overall-trust").value;
+                const reasonValue = document.getElementById("reason").value;
+                const improvementValue = document.getElementById("improvement").value;
+
+                console.log("Overall Trust response: ", overallTrustValue);
+                if (overallTrustValue === "no") {
                     console.log("Reason for distrust: ", reasonValue);
                 }
+                console.log("Suggested improvements: ", improvementValue);
 
                 // Provide feedback to the user
                 alert("Thank you for your response!");
@@ -171,4 +220,5 @@
     </script>
 </body>
 </html>
+
 
