--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Sample Website. All rights reserved.</p>
+        <p>&copy; University of Tennessee Computer Science Department, COSC 569 Phsihing Project</p>
     </footer>
 
     <script>
