--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <header>
         <div class="logo-container">
             <!-- Placeholder for logos with different noise levels -->
-            <img src="logo_noise_level_1.png" alt="Website Logo" id="website-logo">
+            <img src="images/logo.png" alt="Website Logo" id="website-logo">
         </div>
         <nav>
             <ul>
