--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; University of Tennessee Computer Science Department, COSC 569 Phsihing Project</p>
+    &copy; 2024 University of Tennessee Computer Science Department COSC 569 FR^2 Team. All rights reserved.
     </footer>
 
     <script>
