--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <form id="logo-trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="POST">
             <div class="logo-grid">
                 <div class="logo-item">
-                    <img src="logo_noise_level_1.png" alt="Logo 1">
+                    <img src="" alt="Logo 1">
                     <label>Do you trust this logo?</label>
                     <select name="trust_logo_1" class="trust-select">
                         <option value="yes">Yes</option>
@@ -136,7 +136,7 @@
                     </select>
                 </div>
                 <div class="logo-item">
-                    <img src="logo_noise_level_2.png" alt="Logo 2">
+                    <img src="" alt="Logo 2">
                     <label>Do you trust this logo?</label>
                     <select name="trust_logo_2" class="trust-select">
                         <option value="yes">Yes</option>
@@ -144,7 +144,7 @@
                     </select>
                 </div>
                 <div class="logo-item">
-                    <img src="logo_noise_level_3.png" alt="Logo 3">
+                    <img src="" alt="Logo 3">
                     <label>Do you trust this logo?</label>
                     <select name="trust_logo_3" class="trust-select">
                         <option value="yes">Yes</option>
