--- a/index.html
+++ b/index.html
@@ -99,38 +99,38 @@
 </head>
 <body>
     <div class="container">
-        <h1>Perturbed Logos Perception Test</h1>
+        <h1>Brand Logo Perception Test</h1>
 
         <!-- Clean Logos Section -->
-        <h2>Clean Logos</h2>
+        <h2>Logos for Evaluation</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="./Control Group (Images)/CLEAN_fb.png" alt="Clean version of the Facebook logo for testing">
-                <figcaption>Facebook (Clean)</figcaption>
+                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of $1 for testing">
+                <figcaption>$1</figcaption>
             </figure>
             <figure class="logo">
-                <img src="./Control Group (Images)/CLEAN_insta.png" alt="Clean version of the Instagram logo for testing">
+                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Clean version of the Instagram logo for testing">
                 <figcaption>Instagram (Clean)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="./Control Group (Images)/CLEAN_yt.png" alt="Clean version of the YouTube logo for testing">
+                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_yt.png" alt="Clean version of the YouTube logo for testing">
                 <figcaption>YouTube (Clean)</figcaption>
             </figure>
         </div>
 
         <!-- Perturbed Logos Section -->
-        <h2>Perturbed Logos</h2>
+        <h2>Logos for Evaluation (Continued)</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="./Noisy Logo (Images)/fb1.png" alt="Perturbed version of the Facebook logo for testing">
-                <figcaption>Facebook (Perturbed)</figcaption>
+                <img src="Logo Images(for Testing)/Noisy Logo (Images)/fb1.png" alt="Logo of $1 for testing">
+                <figcaption>$1</figcaption>
             </figure>
             <figure class="logo">
-                <img src="./Noisy Logo (Images)/insta1.png" alt="Perturbed version of the Instagram logo for testing">
+                <img src="Logo Images(for Testing)/Noisy Logo (Images)/insta1.png" alt="Perturbed version of the Instagram logo for testing">
                 <figcaption>Instagram (Perturbed)</figcaption>
             </figure>
             <figure class="logo">
-                <img src="./Noisy Logo (Images)/yt1.png" alt="Perturbed version of the YouTube logo for testing">
+                <img src="Logo Images(for Testing)/Noisy Logo (Images)/yt1.png" alt="Perturbed version of the YouTube logo for testing">
                 <figcaption>YouTube (Perturbed)</figcaption>
             </figure>
         </div>
@@ -148,6 +148,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
+            
             <label for="age">Age:</label>
             <input type="number" id="age" name="age" min="13" required><br>
 
