--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A test page displaying clean and perturbed brand logos for human perception testing.">
-    <title>Perturbed Logos Perception Test</title>
+    <title>Brand Logo Perception Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,37 +101,44 @@
     <div class="container">
         <h1>Brand Logo Perception Test</h1>
 
-        <!-- Clean Logos Section -->
+        <!-- Logos for Evaluation Section -->
         <h2>Logos for Evaluation</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of $1 for testing">
-                <figcaption>$1</figcaption>
+                <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of Facebook for testing">
+                <figcaption>Facebook</figcaption>
             </figure>
             <figure class="logo">
-                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Clean version of the Instagram logo for testing">
-                <figcaption>Instagram (Clean)</figcaption>
+                <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
+                <figcaption>Instagram</figcaption>
             </figure>
             <figure class="logo">
-                <img src="Logo Images(for Testing)/Control Group (Images)/CLEAN_yt.png" alt="Clean version of the YouTube logo for testing">
-                <figcaption>YouTube (Clean)</figcaption>
-            </figure>
-        </div>
-
-        <!-- Perturbed Logos Section -->
-        <h2>Logos for Evaluation (Continued)</h2>
-        <div class="logo-section">
-            <figure class="logo">
-                <img src="Logo Images(for Testing)/Noisy Logo (Images)/fb1.png" alt="Logo of $1 for testing">
-                <figcaption>$1</figcaption>
+                <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_yt.png" alt="Logo of YouTube for testing">
+                <figcaption>YouTube</figcaption>
             </figure>
             <figure class="logo">
-                <img src="Logo Images(for Testing)/Noisy Logo (Images)/insta1.png" alt="Perturbed version of the Instagram logo for testing">
-                <figcaption>Instagram (Perturbed)</figcaption>
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb1.png" alt="Logo of Facebook for testing">
+                <figcaption>Facebook</figcaption>
             </figure>
             <figure class="logo">
-                <img src="Logo Images(for Testing)/Noisy Logo (Images)/yt1.png" alt="Perturbed version of the YouTube logo for testing">
-                <figcaption>YouTube (Perturbed)</figcaption>
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta1.png" alt="Logo of Instagram for testing">
+                <figcaption>Instagram</figcaption>
+            </figure>
+            <figure class="logo">
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt1.png" alt="Logo of YouTube for testing">
+                <figcaption>YouTube</figcaption>
+            </figure>
+            <figure class="logo">
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
+                <figcaption>Facebook (High Perturbation)</figcaption>
+            </figure>
+            <figure class="logo">
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta2.png" alt="Logo of Instagram for testing">
+                <figcaption>Instagram (High Perturbation)</figcaption>
+            </figure>
+            <figure class="logo">
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt2.png" alt="Logo of YouTube for testing">
+                <figcaption>YouTube (High Perturbation)</figcaption>
             </figure>
         </div>
 
@@ -139,8 +146,9 @@
         <form id="logo-trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="post">
             <h2>Survey Questions</h2>
 
-            <label for="logo-trust">Do you trust this logo as representing Facebook?</label><br>
-            <select id="logo-trust" name="logo-trust">
+            <label for="logo-trust">For each logo, rate how much you trust it as representing the brand (1-5):</label><br>
+            <label>Facebook (Low Perturbation):</label>
+            <select id="logo-trust-fb1" name="logo-trust-fb1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
                 <option value="3">3 - Neutral</option>
@@ -148,7 +156,51 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            
+            <label>Facebook (High Perturbation):</label>
+            <select id="logo-trust-fb2" name="logo-trust-fb2">
+                <option value="1">1 - Not at all</option>
+                <option value="2">2</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4</option>
+                <option value="5">5 - Completely</option>
+            </select><br>
+
+            <label>Instagram (Low Perturbation):</label>
+            <select id="logo-trust-insta1" name="logo-trust-insta1">
+                <option value="1">1 - Not at all</option>
+                <option value="2">2</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4</option>
+                <option value="5">5 - Completely</option>
+            </select><br>
+
+            <label>Instagram (High Perturbation):</label>
+            <select id="logo-trust-insta2" name="logo-trust-insta2">
+                <option value="1">1 - Not at all</option>
+                <option value="2">2</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4</option>
+                <option value="5">5 - Completely</option>
+            </select><br>
+
+            <label>YouTube (Low Perturbation):</label>
+            <select id="logo-trust-yt1" name="logo-trust-yt1">
+                <option value="1">1 - Not at all</option>
+                <option value="2">2</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4</option>
+                <option value="5">5 - Completely</option>
+            </select><br>
+
+            <label>YouTube (High Perturbation):</label>
+            <select id="logo-trust-yt2" name="logo-trust-yt2">
+                <option value="1">1 - Not at all</option>
+                <option value="2">2</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4</option>
+                <option value="5">5 - Completely</option>
+            </select><br>
+
             <label for="age">Age:</label>
             <input type="number" id="age" name="age" min="13" required><br>
 
@@ -160,7 +212,7 @@
                 <option value="prefer-not-to-say">Prefer not to say</option>
             </select><br>
 
-            <label for="familiarity">How familiar are you with the Facebook brand? (1-5)</label>
+            <label for="familiarity">How familiar are you with these brands? (1-5)</label>
             <select id="familiarity" name="familiarity">
                 <option value="1">1 - Not familiar at all</option>
                 <option value="2">2</option>
@@ -169,7 +221,7 @@
                 <option value="5">5 - Very familiar</option>
             </select><br>
 
-            <label for="frequency">How often do you use Facebook?</label>
+            <label for="frequency">How often do you use these brands' platforms?</label>
             <select id="frequency" name="frequency">
                 <option value="daily">Daily</option>
                 <option value="weekly">Weekly</option>
@@ -195,7 +247,4 @@
     </div>
 </body>
 </html>
-
-
-
 
