--- a/index.html
+++ b/index.html
@@ -105,8 +105,16 @@
         <h2>Logos for Evaluation</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook</figcaption>
+                <img src="" alt="">
+                <figcaption></figcaption>
+                <label for="logo-trust-">How much do you trust this logo as representing the brand (1-5):</label><br>
+                <select id="logo-trust-" name="logo-trust-">
+                    <option value="1">1 - Not at all</option>
+                    <option value="2">2</option>
+                    <option value="3">3 - Neutral</option>
+                    <option value="4">4</option>
+                    <option value="5">5 - Completely</option>
+                </select><br>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
@@ -130,15 +138,15 @@
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook (High Perturbation)</figcaption>
+                <figcaption>Facebook</figcaption><!-- High Perturbation -->
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta2.png" alt="Logo of Instagram for testing">
-                <figcaption>Instagram (High Perturbation)</figcaption>
+                <figcaption>Instagram</figcaption><!-- High Perturbation -->
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt2.png" alt="Logo of YouTube for testing">
-                <figcaption>YouTube (High Perturbation)</figcaption>
+                <figcaption>YouTube</figcaption><!-- High Perturbation -->
             </figure>
         </div>
 
@@ -147,7 +155,7 @@
             <h2>Survey Questions</h2>
 
             <label for="logo-trust">For each logo, rate how much you trust it as representing the brand (1-5):</label><br>
-            <label>Facebook (Low Perturbation):</label>
+            <label>Facebook:</label><!-- Low Perturbation -->
             <select id="logo-trust-fb1" name="logo-trust-fb1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -156,7 +164,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Facebook (High Perturbation):</label>
+            <label>Facebook:</label><!-- High Perturbation -->
             <select id="logo-trust-fb2" name="logo-trust-fb2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -165,7 +173,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Instagram (Low Perturbation):</label>
+            <label>Instagram:</label><!-- Low Perturbation -->
             <select id="logo-trust-insta1" name="logo-trust-insta1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -174,7 +182,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Instagram (High Perturbation):</label>
+            <label>Instagram:</label><!-- High Perturbation -->
             <select id="logo-trust-insta2" name="logo-trust-insta2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -183,7 +191,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>YouTube (Low Perturbation):</label>
+            <label>YouTube:</label><!-- Low Perturbation -->
             <select id="logo-trust-yt1" name="logo-trust-yt1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -192,7 +200,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>YouTube (High Perturbation):</label>
+            <label>YouTube:</label><!-- High Perturbation -->
             <select id="logo-trust-yt2" name="logo-trust-yt2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
