--- a/index.html
+++ b/index.html
@@ -107,14 +107,7 @@
             <figure class="logo">
                 <img src="" alt="">
                 <figcaption></figcaption>
-                <label for="logo-trust-">How much do you trust this logo as representing the brand (1-5):</label><br>
-                <select id="logo-trust-" name="logo-trust-">
-                    <option value="1">1 - Not at all</option>
-                    <option value="2">2</option>
-                    <option value="3">3 - Neutral</option>
-                    <option value="4">4</option>
-                    <option value="5">5 - Completely</option>
-                </select><br>
+            </figure>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
@@ -155,7 +148,7 @@
             <h2>Survey Questions</h2>
 
             <label for="logo-trust">For each logo, rate how much you trust it as representing the brand (1-5):</label><br>
-            <label>Facebook:</label><!-- Low Perturbation -->
+            <label for="logo-trust-fb1">Facebook:</label><!-- Low Perturbation -->
             <select id="logo-trust-fb1" name="logo-trust-fb1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -164,7 +157,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Facebook:</label><!-- High Perturbation -->
+            <label for="logo-trust-fb2">Facebook:</label><!-- High Perturbation -->
             <select id="logo-trust-fb2" name="logo-trust-fb2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -173,7 +166,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Instagram:</label><!-- Low Perturbation -->
+            <label for="logo-trust-insta1">Instagram:</label><!-- Low Perturbation -->
             <select id="logo-trust-insta1" name="logo-trust-insta1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -182,7 +175,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>Instagram:</label><!-- High Perturbation -->
+            <label for="logo-trust-insta2">Instagram:</label><!-- High Perturbation -->
             <select id="logo-trust-insta2" name="logo-trust-insta2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -191,7 +184,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>YouTube:</label><!-- Low Perturbation -->
+            <label for="logo-trust-yt1">YouTube:</label><!-- Low Perturbation -->
             <select id="logo-trust-yt1" name="logo-trust-yt1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -200,7 +193,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label>YouTube:</label><!-- High Perturbation -->
+            <label for="logo-trust-yt2">YouTube:</label><!-- High Perturbation -->
             <select id="logo-trust-yt2" name="logo-trust-yt2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -255,4 +248,5 @@
     </div>
 </body>
 </html>
+
 
