--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
         <h2>Logos for Evaluation</h2>
         <div class="logo-section">
             <figure class="logo">
-                <img src="" alt="">
-                <figcaption></figcaption>
-            </figure>
+                <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of Facebook for testing">
+                <figcaption>Facebook</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
